--- a/ConsoleApp2.csproj
+++ b/ConsoleApp2.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="5.8.3" />
+    <PackageReference Include="Microsoft.Office.Interop.Excel" />
+  </ItemGroup>
+
 </Project>
